--- a/.github/workflows/small8.yml
+++ b/.github/workflows/small8.yml
@@ -6,8 +6,8 @@ on:
     paths:
       - '.github/workflows/small8.yml'
       - 'diy/**'
-  schedule:
-    - cron: 35 8,23 * * *
+  #schedule:
+    #- cron: 35 8,23 * * *
   watch:
     types: started
   repository_dispatch:
